--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "MTQ0NTA0MTYzODA5MDA4NDM1Mg.GvbMb3.0VceC5UV66bUgbQXUEhtXhwt-iZcx8dV7BJkxI",
+	"token": "",
 	"clientId": "1445041638090084352"
 }
